--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-  <img class="w3-image" src="img/PSU.JPG" alt="psu" width="1500" height="800">
+  <img class="w3-image" src="img/PSU.jpg" alt="psu" width="1500" height="800">
 </header>
 
 <!-- Page content -->
@@ -87,7 +87,7 @@
 
 <div class="w3-third">
 <div class="w3-card-4">
-<a href="flower6.html"><img src="img/IMG_555.JPG" style="width:100%"></a>
+<a href="flower6.html"><img src="img/IMG_555.jpg" style="width:100%"></a>
 <div class="w3-container">
 <h4>ดอกดาวเรือง</h4>
 </div>
