--- a/flower1.html
+++ b/flower1.html
@@ -32,7 +32,7 @@
   <div class="w3-twothird">
     <div class="w3-card-4">
       <div class="w3-display-container">
-        <img src="img/flower1.jpg" alt="Car" style="width:100%">
+        <img src="img/flower1.JPG" alt="Car" style="width:100%">
       </div>
       <div class="w3-container w3-light-grey">
         <p style="text-indent:40px;">ดอกบานบุรี ดอกมีขนาดใหญ่ ออกดอกเป็นช่อกระจุกบริเวณยอด โดยจะออกตามวอกใบและที่ปลายกิ่ง ดอกมีกลีบเลี้ยงเป็นสีเขียวปลายแยกเป็นแฉก 5 แฉก ส่วนดอกย่อยเป็นสีเหลือง มีกลีบดอก 5 กลีบ ลักษณะเป็นรูปขอบขนานหรือเป็นรูปหอก ปลายกลีบดอกมนใหญ่ มีขนาดกว้างประมาณ 3 มิลลิเมตร และยาวประมาณ 16 มิลลิเมตร โคนเชื่อมติดกันเป็นท่อสั้นหรือเป็นหลอดแคบ ดอกตูมนั้น กลีบดอกจะบิดไปในทางเดียวกัน ดอกมีเกสรเพศผู้ประมาณ 5 อัน ติดอยู่ด้านในใกล้กับโคนท่อดอก ส่วนเกสรเพศเมียนั้นมีช่องเดียว ภายในมีรังไข่อ่อนเป็นจำนวนมาก ก้านเกสรมีขนาดสั้นและมีขน ส่วนอับเรณูมีลักษณะเป็นรูปคล้ายหัวลูกศร ดอกเมื่อบานเต็มที่จะมีขนาดกว้างประมาณ 6-10 เซนติเมตร และสามารถออกดอกได้ตลอดทั้งปี โดยเฉพาะในช่วงฤดูร้อนจะออกดอกดกเป็นพิเศษ</p>
@@ -51,7 +51,7 @@
 
 <div class="w3-section w3-container">
 <div class="w3-card-4">
-  <img src="img/IMG_2569.jpg" alt="flower" style="width:100%">
+  <img src="img/IMG_2569.JPG" alt="flower" style="width:100%">
   <div class="w3-container w3-white">
     <p style="text-indent:40px;">ดอกบานบุรีสามารถปลูกเป็นไม้ประดับตามสวน ริมถนน ริมทะเล ตามทางเดิน หรือปลูกคลุมดิน สามารถตัดแต่งให้เป็นทรงพุ่มได้ อีกทั้งยังมีดอกที่สวยงาม สามารถออกดอกได้ตลอดทั้งปี โดยเฉพาะในช่วงฤดูร้อนจะออกดอกดกมากเป็นพิเศษ</p>
   </div>
