--- a/flower2.html
+++ b/flower2.html
@@ -32,7 +32,7 @@
   <div class="w3-twothird">
     <div class="w3-card-4">
       <div class="w3-display-container">
-        <img src="img/flower2.jpg" alt="Car" style="width:100%">
+        <img src="img/flower2.JPG" alt="Car" style="width:100%">
       </div>
       <div class="w3-container w3-light-grey">
         <p style="text-indent:40px;">ต้นเข็มเป็นพรรณไม้ยืนต้นมีพุ่มขนาดเล็กจนถึงขนาดกลางขนาดลำต้นมีความสูงประมาณ3-5 เมตรลำต้นเป็นต้นเดี่ยวหรือแตก
@@ -55,7 +55,7 @@
 
 <div class="w3-section w3-container">
 <div class="w3-card-4">
-  <img src="img/IMG_2572.jpg" alt="flower" style="width:100%">
+  <img src="img/IMG_2572.JPG" alt="flower" style="width:100%">
   <div class="w3-container w3-white">
     <p style="text-indent:40px;">ดอกเข็มนิยมปลูกเพื่อประดับรั้วบ้าน อีกทั้งยังเป็นต้นไม้ที่เปรียบเหมือนเป็นสัญลักษณ์แห่งพิธีไหว้ครูอีกด้วย ด้วยลักษณะดอกที่แหลมเล็ก สีสันสดใสทั้งสีแดง ชมพู หรือสีส้ม พร้อมกับความหมายดี ๆ ที่เป็นมงคล</p>
 </div>
