--- a/flower3.html
+++ b/flower3.html
@@ -32,7 +32,7 @@
   <div class="w3-twothird">
     <div class="w3-card-4">
       <div class="w3-display-container">
-        <img src="img/flower3.jpg" alt="Car" style="width:100%">
+        <img src="img/flower3.JPG" alt="Car" style="width:100%">
       </div>
       <div class="w3-container w3-light-grey">
         <p style="text-indent:40px;">ดอนย่าเป็นพันธุ์ไม้พุ่มที่มีเนื้อไม้และพุ่มสูงประมาณ 4-8 ฟุต ใบกว้างประมาณ 3-4 นิ้ว ยาว 5-8 นิ้ว ปลายใบแหลม สีเขียวอ่อน บางชนิดมีใบเป็นขนบาง ๆ ไม่เป็นมันเรียบ ใบอ่อนนุ่ม ออกดอกดกเป็นพุ่มเป็นช่อเต็มต้น ทำให้เป็นพุ่มงามสดุดตามาก ดอนย่าชอบดินร่วนซุย มีอาหารพืชสมบูรณ์และขึ้นได้ดีในดินทั่ว ๆ ไป ต้องการความชื้นสูง และส่วนมากชอบขึ้นในที่กลางแจ้ง ให้ได้รับแสงแดดโดยตรง โดยเฉพาะ Dona aurora ดอกสีขาวเจริญเติบโต ขยายพันธุ์ได้ง่ายจึงนิยมปลูกกันมากในเมืองไทย
@@ -51,7 +51,7 @@
 
 <div class="w3-section w3-container">
 <div class="w3-card-4">
-  <img src="img/IMG_2557.jpg" alt="flower" style="width:100%">
+  <img src="img/IMG_2557.JPG" alt="flower" style="width:100%">
   <div class="w3-container w3-white">
     <p style="text-indent:40px;">ดอนย่าเป็นไม้พุ่มขนาดกลางที่มีใบต่างดอก ที่มีสีสวยสดงดงามคือ ดอกจริงๆนั้นเล็กไม่สวยงาม แต่ใบที่ติดอยู่ชิดกับดอกนั้นมีสีสัน แปรรูปไปจากใบธรรมดา เช่นเดียวกับเฟื่องฟ้า หรือตรุษจีน ดอนย่าเป็นไม้พุ่มที่จัดเข้าอยู่ในพวกไม้ดอกก็ได้ เพราะมีใบต่างดอกสวยงามสดุดตา
  ฤดูดอกไม้บาน ออกดอกตลอดปี เนื่องจากปลูกได้ในดินทุกชนิด จึงนิยมนำมาปลูกเป็นไม้ประดับในสวนขนาดเล็ก และตามสวนสาธารณะหรือปลูกเป็นแถว</p>
