--- a/flower4.html
+++ b/flower4.html
@@ -32,7 +32,7 @@
   <div class="w3-twothird">
     <div class="w3-card-4">
       <div class="w3-display-container">
-        <img src="img/flower4.jpg" alt="Car" style="width:100%">
+        <img src="img/flower4.JPG" alt="Car" style="width:100%">
       </div>
       <div class="w3-container w3-light-grey">
         <p style="text-indent:40px;">ลักษณะ ต้น ขิงแดงเป็นพืชวงศ์เดียวกับขิงข่า ซึ่งมีลำต้นใต้ดินเรียกว่าเหง้า (rhizome) มีขนาดสั้น แตกสาขาทอดขนานไปกับผิวดิน และเป็นที่สะสมอาหาร เหง้ามีสีแดง เส้นผ่าศูนย์กลาง 1-1.5 ซ.ม. ส่วนลำต้นเหนือดินเป็นกาบใบที่โอบซ้อนกันแน่น เช่นเดียวกับพวกกล้วย ส่วนนี้คือลำต้น เทียม (pseudostem) ลำต้นเหนือดินสูง 1-2 เมตร หากสมบูรณ์มากหรือขึ้นอยู่ในธรรมชาติอาจ สูงถึง 5 เมตร ขึ้นอัดแน่นเป็นกอใหญ่
@@ -55,7 +55,7 @@
 
 <div class="w3-section w3-container">
 <div class="w3-card-4">
-  <img src="img/IMG_2566.jpg" alt="flower" style="width:100%">
+  <img src="img/IMG_2566.JPG" alt="flower" style="width:100%">
   <div class="w3-container w3-white">
     <p style="text-indent:40px;">ขิงแดงเป็นพืชที่มีการปลูกประดับบ้านเรือนมานานแล้ว มีการดูแลรักษาง่าย สามารถ เจริญเติบโตได้ดีในสภาพดินทั่วไป ขยายพันธุ์ได้ด้วยหน่อ และให้ดอกตลอดปี ขิงแดงมีช่อดอก ที่สวยงาม สามารถบานอยู่บนต้นได้นาน และมีรูปทรงของดอกที่แปลกกว่าไม้ดอกชนิดอื่น ๆ ประกอบกับเมื่อนำมาปักแจกันพบว่ามีอายุการปักแจกันที่เหมาะสม ทำให้เป็นที่ต้องการของผู้ บริโภค ดังจะเห็นได้จากวิวัฒนาการจากการปลูกเป็นไม้ประดับบริเวณบ้าน มาเป็นการปลูกเพื่อ ตัดดอกเป็นการค้ามากขึ้น จากข้อมูลการซื้อขายที่ปากคลองตลาดพบว่ามีการซื้อขายขิงแดงเป็น ปริมาณ 2,000 ดอก/สัปดาห์ คิดเป็นมูลค่า 10,000 บาท/สัปดาห์ และยังพบว่ามีการส่งออก บ้าง</p>
   </div>
