--- a/flower5.html
+++ b/flower5.html
@@ -32,7 +32,7 @@
   <div class="w3-twothird">
     <div class="w3-card-4">
       <div class="w3-display-container">
-        <img src="img/flower5.jpg" alt="Car" style="width:100%">
+        <img src="img/flower5.JPG" alt="Car" style="width:100%">
       </div>
       <div class="w3-container w3-light-grey">
         <p style="text-indent:40px;">ต้นเทียนหยด หรือ ต้นฟองสมุทร มีถิ่นกำเนิดในอเมริกาเขตร้อนตั้งแต่ฟลอริดาไปจนถึงบราซิล ตลอดจนหมู่เกาะอินดีสตะวันตก จัดเป็นพรรณไม้พุ่ม แตกกิ่งก้านสาขามากรอบ ๆ ลำต้นตั้งแต่โคนต้นถึงยอด ลักษณะรูปทรงไม่แน่นอน ลำต้นมีความสูงได้ประมาณ 1-3 เมตร กิ่งมีลักษณะลู่ลง ตามกิ่งอาจมีหนามบ้างเล็กน้อย เป็นพรรณไม้กลางแจ้งที่ขยายพันธุ์ด้วยวิธีการเพาะเมล็ดเจริญเติบโตได้ดีในดินร่วนซุย ดินร่วนปนทราย ระบายน้ำได้ดี มีแสงแดดแบบเต็มวันใบเทียนหยด ใบเป็นใบเดี่ยว ออกเรียงสลับตรงข้ามกันเป็นคู่ ๆ ลักษณะของใบเป็นรูปรี ปลายใบแหลมหรือมนแต่จะสั้น โคนใบสอบหรือเรียวยาวไปจนถึงก้านใบ ส่วนขอบใบเป็นจักเป็นฟันเลื่อยเล็กน้อย ใบมีขนาดกว้างประมาณ 3-3.5 เซนติเมตร และยาวประมาณ 5-6 เซนติเมตร แผ่นใบเป็นสีเขียว ก้านใบสั้น ออกใบดกเต็มต้น 
@@ -53,7 +53,7 @@
 
 <div class="w3-section w3-container">
 <div class="w3-card-4">
-  <img src="img/IMG_2563.jpg" alt="flower" style="width:100%">
+  <img src="img/IMG_2563.JPG" alt="flower" style="width:100%">
   <div class="w3-container w3-white">
     <p style="text-indent:40px;">มีการใช้เป็นยาถ่ายพยาธิและใช้ฆ่าลูกน้ำในบ่อหรือในที่มีน้ำขังได้ โดยใช้น้ำที่ได้จากเมล็ดเทียนหยดมาละลายในน้ำ 1/100 ส่วนใช้ปลูกเป็นไม้ประดับทั่วไปตามทางเดิน ริมถนน ริมทะเล สวนสาธารณะ โดยปลูกเป็นไม้ประธาน หรือปลูกเป็นแนวรั้วบัง เนื่องจากเป็นไม้ที่มีทรงพุ่มสวยงาม ดอกมีสีสันสวยงาม ส่งกลิ่นหอมอ่อน ๆ ตลอดทั้งวัน สามารถออกดอกได้ตลอดทั้งปี ประกอบกับผลแก่ที่มีสีเหลืองสดเป็นมันดูสดใสคล้ายเทียนหยดงดงามมาก อีกทั้งต้นเทียนหยดยังเป็นพันธุ์ไม้ที่เจริญเติบโตได้เร็ว ปลูกและดูแลรักษาง่าย ไม่มีโรคและแมลงศัตรูพืชเข้าทำลาย สามารถตัดแต่งเป็นรูปทรงต่าง ๆ ได้ตามต้องการ แต่ไม่ควรปลูกใกล้สนามเด็กเล่นเพราะผลและใบมีพิษ
 ใช้ปลูกเป็นแนวรั้วเพื่อป้องกันวัว ควาย แพะ แกะ ฯลฯ ได้ เนื่องจากใบของเทียนหยดจะมีสารซาโปนินที่สัตว์จะไม่กินเพราะเป็นพิษ ในประเทศอินเดียจึงนิยมนำปลูกกันมากเนื่องจากมีสัตว์จำพวกวัว แพะ ฯลฯ ถูกปล่อยเดินตามถนนมากมาย</div>
