--- a/flower6.html
+++ b/flower6.html
@@ -51,7 +51,7 @@
 
 <div class="w3-section w3-container">
 <div class="w3-card-4">
-  <img src="img/IMG_2574.jpg" alt="flower" style="width:100%">
+  <img src="img/IMG_2574.JPG" alt="flower" style="width:100%">
   <div class="w3-container w3-white">
     <p style="text-indent:40px;">ดาวเรือง เป็นไม้ดอกที่คนไทยนิยมปลูกกันมาก เนื่องจากเมล็ดมีขนาดใหญ่ปลูกง่าย งอกเร็ว ต้นโตเร็ว และแข็งแรงไม่ค่อยมีโรคหรือแมลงรบกวน ให้ดอกเร็ว ดอกดก มีหลายชนิดและหลายสี รูปทรงของดอกสวยงาม สีสันสดใส บานทนนานหลายวัน สามารถปักแจกันได้นาน 1-2 สัปดาห์ ให้ดอกในระยะเวลาสั้น คือ ประมาณ 60-70 วัน หลังปลูก ดังนั้นในการปลูกดาวเรืองสามารถกำหนดระยะเวลาการออกดอกให้ตรงกับเทศกาลสำคัญได้จึงมีผู้นิยมปลูก และใช้ดาวเรืองกันมาก นอกจากนี้ยังสามารถปลูกได้ตลอดปี และปลูกได้ทุกจังหวัดในประเทศไทย ดาวเรืองเป็นไม้ดอกที่ทำรายได้ให้กับผู้ปลูกสูง ในปัจจุบันการปลูกดาวเรืองนอกจากปลูกเพื่อตัดดอกขายแล้ว ยังนิยมปลูกในกระถางหรือถุงพลาสติก เพื่อประดับตกแต่งอาคารสถานที่ และปลูกเพื่อตัดดอกส่งโรงงานอาหารสัตว์อีกด้วย
 </div>
