--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </div>
 
 <!-- Header -->
-<header class="w3-display-container w3-wide" style="max-width:1500px;" id="home">
+<header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
   <img class="w3-image" src="img/PSU.jpg" alt="psu" width="1500" height="800">
 </header>
 
