--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 </head>
 <body class="w3-light-grey">
-
+<div class="w3-animate-opacity">
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-pale-green w3-wide w3-padding w3-card-2">
@@ -179,6 +179,6 @@ To use this code on your website, get a free API key from Google.
 Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
 -->
 </div>
-
+</div>
 </body>
 </html>
