--- a/flower6.html
+++ b/flower6.html
@@ -9,7 +9,7 @@
 <body class="w3-light-grey">
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
-  <div class="w3-bar w3-pale-green w3-wide w3-padding w3-card-2">
+  <div class="w3-bar w3-pale-green w3-wide w3-padding w3-card-2 w3-animate-top">
     <a href="index.html#home" class="w3-bar-item w3-button w3-hover-pale-blue"><b>PSU</b> Flower</a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
