--- a/flower1.html
+++ b/flower1.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
-<body class="w3-black">
+<body class="w3-light-grey">
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-pale-green w3-wide w3-padding w3-card-2">
