--- a/flower1.html
+++ b/flower1.html
@@ -5,17 +5,26 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<style>
+a,h1,h2,h3,h4,h5,h6
+	{
+	font-family:JasmineUPC;font-size:28px;
+}
+p{
+	font-family:JasmineUPC;font-size:22px;
+}
+</style>
 </head>
 <body class="w3-light-grey">
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
-  <div class="w3-bar w3-pale-green w3-wide w3-padding w3-card-2">
     <a href="index.html#home" class="w3-bar-item w3-button w3-hover-pale-blue"><b>PSU</b> Flower</a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
       <a href="index.html#flowers" class="w3-bar-item w3-button w3-hover-pale-blue">Flowers</a>
       <a href="index.html#about" class="w3-bar-item w3-button w3-hover-pale-blue">About</a>
-      <a href="index.html#contact" class="w3-bar-item w3-button w3-hover-pale-blue">Contact</a>
+      <a href="dev.html#dev" class="w3-bar-item w3-button w3-hover-pale-blue">Developer</a>
+	  <a href="index.html#feedback" class="w3-bar-item w3-button w3-hover-pale-blue">Feedback</a>
     </div>
   </div>
 </div>
