--- a/index.html
+++ b/index.html
@@ -1,23 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>W3.CSS Template</title>
+<title>PSU Flower</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/w3.css">
 
 </head>
+<style>
+a,h1,h2,h3,h4,h5,h6
+	{
+	font-family:JasmineUPC;font-size:28px;
+}
+p{
+	font-family:JasmineUPC;font-size:22px;
+}
+</style>
 <body class="w3-light-grey">
 <div class="w3-animate-opacity">
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-pale-green w3-wide w3-padding w3-card-2 w3-animate-top">
-    <a href="#home" class="w3-bar-item w3-button w3-hover-pale-blue"><b>PSU</b> Flower</a>
+    <a href="index.html#home" class="w3-bar-item w3-button w3-hover-pale-blue"><b>PSU</b> Flower</a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
-      <a href="#flowers" class="w3-bar-item w3-button w3-hover-pale-blue">Flowers</a>
-      <a href="#about" class="w3-bar-item w3-button w3-hover-pale-blue">About</a>
-      <a href="#contact" class="w3-bar-item w3-button w3-hover-pale-blue">Contact</a>
+      <a href="index.html#flowers" class="w3-bar-item w3-button w3-hover-pale-blue">Flowers</a>
+      <a href="index.html#about" class="w3-bar-item w3-button w3-hover-pale-blue">About</a>
+      <a href="dev.html#dev" class="w3-bar-item w3-button w3-hover-pale-blue">Developer</a>
+	  <a href="index.html#feedback" class="w3-bar-item w3-button w3-hover-pale-blue">Feedback</a>
     </div>
   </div>
 </div>
@@ -32,12 +42,12 @@
 
   <!-- Project Section -->
   <div class="w3-container w3-padding-32" id="flowers">
-    <h3 class="w3-border-bottom w3-border-black w3-padding-16 ">Flowers</h3>
+    <h3 class="w3-border-bottom w3-border-black w3-padding-16 "style="font-size:40px;">Flowers</h3>
   </div>
 
 <div class="w3-row-padding w3-margin-top">
 
-<div class="w3-third">
+<div class="w3-quarter">
 <div class="w3-card-4">
 <a href="flower1.html"><img src="img/IMG_2568.JPG" style="width:100%"></a>
 <div class="w3-container">
@@ -46,7 +56,7 @@
 </div>
 </div>
 
-<div class="w3-third">
+<div class="w3-quarter">
 <div class="w3-card-4">
 <a href="flower2.html"><img src="img/IMG_2571.JPG" style="width:100%"></a>
 <div class="w3-container">
@@ -55,7 +65,7 @@
 </div>
 </div>
 
-<div class="w3-third">
+<div class="w3-quarter">
 <div class="w3-card-4">
 <a href="flower3.html"><img src="img/IMG_2556.JPG" style="width:100%"></a>
 <div class="w3-container">
@@ -63,11 +73,7 @@
 </div>
 </div>
 </div>
-
-</div>
-<div class="w3-row-padding w3-margin-top">
-
-<div class="w3-third">
+<div class="w3-quarter">
 <div class="w3-card-4">
 <a href="flower4.html"><img src="img/IMG_2566.JPG" style="width:100%"></a>
 <div class="w3-container">
@@ -75,8 +81,11 @@
 </div>
 </div>
 </div>
+</div>
 
-<div class="w3-third">
+
+<div class="w3-row-padding w3-margin-top">
+<div class="w3-quarter">
 <div class="w3-card-4">
 <a href="flower5.html"><img src="img/IMG_2561.JPG" style="width:100%"></a>
 <div class="w3-container">
@@ -85,7 +94,7 @@
 </div>
 </div>
 
-<div class="w3-third">
+<div class="w3-quarter">
 <div class="w3-card-4">
 <a href="flower6.html"><img src="img/IMG_555.jpg" style="width:100%"></a>
 <div class="w3-container">
@@ -94,45 +103,41 @@
 </div>
 </div>
 
+<div class="w3-quarter">
+<div class="w3-card-4">
+<a href="flower7.html"><img src="img/flower7.JPG" style="width:100%"></a>
+<div class="w3-container">
+<h4>ดอกกล้วยไม้</h4>
+</div>
+</div>
+</div>
+<div class="w3-quarter">
+<div class="w3-card-4">
+<a href="flower8.html"><img src="img/flower8.jpeg" style="width:100%"></a>
+<div class="w3-container">
+<h4>ดอกศรีตรัง</h4>
+</div>
+</div>
+</div>
 </div>
   <!-- About Section -->
   <div class="w3-container w3-padding-32" id="about">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16"style="font-size:40px;">About</h3>
+	<div class="w3-row-padding">
+		<div class="w3-half"><img src="img/IMG_3028.JPG"style="width:100%;"></div>
+		<div class="w3-half"><img src="img/IMG_3025.JPG"style="width:100%;"></div>
+	</div>
     <p style="text-indent:50px;">มหาวิทยาลัยสงขลานครินทร์เป็นมหาวิทยาลัยภูมิภาคใต้เป็นพระนามฐานันดรศักดิ์ที่พระบรมราชชนก (พระบาทสมเด็จ พระจุลจอมเกล้าเจ้าอยู่หัว รัชการที่ 5) โปรดเกล้าฯสถาปนาเจ้าฟ้า "มหิดลอดุลยเดช ดำรงพระนามอิสริยยศฐานันดรศักดิ์ เป็นเจ้ากรม 
 	โดยพระราชทาน ชื่อเมืองสงขลา เป็นพระนามทรงกรมเพื่อเป็นเกียรติแก่เมืองสงขลา เมื่อพ.ศ. 2446 เสมือนเป็นเจ้าแห่งนครสงขลาเป็นมหาลัยตั้งขึ้นสำหรับชาวเกษตรกรรมตามพื้นที่ต่างๆจึงมีนโยบายอนุรักษ์ธรรมชาติและสิ่งแวดล้อมเป็นสำคัญ
 	อย่างเช่นดอกไม้ประจำมหาวิทยาลัยคือดอกศรีตรัง เปรียบเป็นสีม่วงอ่อนกลีบบางงดงามอ่อนหวาน เมื่อสายลมพัดมาเบาๆ หรือยามต้องแสงแดดอุ่น ๆ ดอกศรีตรังชูช่อพลิ้วไปตามแรงลม เป็นสัญลักษณ์ของชาวตรัง
     </p>
   </div>
-<div class="w3-container w3-content w3-padding-64"style="max-width:1000px;">
-  <div class="w3-row-padding w3-grayscale">
-    <div class="w3-col l4 m6 w3-margin-bottom ">
-      <img src="/w3images/team2.JPG" alt="John" style="width:100%">
-      <h3>John Doe</h3>
-      <p class="w3-opacity">CEO & Founder</p>
-      <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-      <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
-    </div>
-    <div class="w3-col l4 m6 w3-margin-bottom">
-      <img src="/w3images/team1.JPG" alt="Jane" style="width:100%">
-      <h3>Jane Doe</h3>
-      <p class="w3-opacity">Architect</p>
-      <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-      <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
-    </div>
-    <div class="w3-col l4 m6 w3-margin-bottom">
-      <img src="/w3images/team3.JPG" alt="Mike" style="width:100%">
-      <h3>Mike Ross</h3>
-      <p class="w3-opacity">Architect</p>
-      <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-      <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
-    </div>
-    
-  </div>
 
   <!-- Contact Section -->
-  <div class="w3-container w3-padding-32" id="contact">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Contact</h3>
-    <p>Lets get in touch and talk about your and our next project.</p>
+  <div class="w3-container"id="feedback">
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16"style="font-size:40px;">Feedback</h3>
+    <p>ข้อเสนอแนะเพื่อปรับปรุงเว็บไซต์ให้ดียิ่งขึ้น</p>
+	<div class="w3-container w3-content w3-center"style="max-width:1200px;">
     <form action="/action_page.php" target="_blank">
       <input class="w3-input" type="text" placeholder="Name" required name="Name">
       <input class="w3-input w3-section" type="text" placeholder="Email" required name="Email">
@@ -142,42 +147,20 @@
         <i class="fa fa-paper-plane"></i> SEND MESSAGE
       </button>
     </form>
+	</div>
   </div>
   
 <!-- End page content -->
-</div>
 
-<!-- Google Map -->
-<div id="googleMap" class="w3-grayscale" style="width:100%;height:450px;"></div>
+
+
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-16">
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 </footer>
 
-<!-- Add Google Maps -->
-<script>
-function myMap()
-{
-  myCenter=new google.maps.LatLng(41.878114, -87.629798);
-  var mapOptions= {
-    center:myCenter,
-    zoom:12, scrollwheel: false, draggable: false,
-    mapTypeId:google.maps.MapTypeId.ROADMAP
-  };
-  var map=new google.maps.Map(document.getElementById("googleMap"),mapOptions);
 
-  var marker = new google.maps.Marker({
-    position: myCenter,
-  });
-  marker.setMap(map);
-}
-</script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyClXH39Umb2hyaqQFSiMktGsRuaKd6Yc1I=myMap"></script>
-<!--
-To use this code on your website, get a free API key from Google.
-Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
--->
 </div>
 </div>
 </body>
