--- a/flower3.html
+++ b/flower3.html
@@ -15,7 +15,8 @@
     <div class="w3-right w3-hide-small">
       <a href="index.html#flowers" class="w3-bar-item w3-button w3-hover-pale-blue">Flowers</a>
       <a href="index.html#about" class="w3-bar-item w3-button w3-hover-pale-blue">About</a>
-      <a href="index.html#contact" class="w3-bar-item w3-button w3-hover-pale-blue">Contact</a>
+      <a href="dev.html#dev" class="w3-bar-item w3-button w3-hover-pale-blue">Developer</a>
+	  <a href="index.html#feedback" class="w3-bar-item w3-button w3-hover-pale-blue">Feedback</a>
     </div>
   </div>
 </div>
