--- a/dev.html
+++ b/dev.html
@@ -121,7 +121,7 @@ p{
           
         </div>
         <div class="w3-container">
-		<h2 class="w3-text-shadow-white"style="font-size:40px;">Pathompong Areesuk</h2>
+		<h2 class="w3-text-shadow-white"style="font-size:40px;">Phutares Suwannarat</h2>
           <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Student</p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Songkhla, TH</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>porpaxkubb@gmail.com</p>
