--- a/flower6.html
+++ b/flower6.html
@@ -5,6 +5,15 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<style>
+a,h1,h2,h3,h4,h5,h6
+	{
+	font-family:JasmineUPC;font-size:28px;
+}
+p{
+	font-family:JasmineUPC;font-size:22px;
+}
+</style>
 </head>
 <body class="w3-light-grey">
 <!-- Navbar (sit on top) -->
