--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ p{
 		<div class="w3-half"><img src="img/IMG_3028.JPG"style="width:100%;"></div>
 		<div class="w3-half"><img src="img/IMG_3025.JPG"style="width:100%;"></div>
 	</div>
-    <p style="text-indent:50px;">มหาวิทยาลัยสงขลานครินทร์เป็นมหาวิทยาลัยภูมิภาคใต้เป็นพระนามฐานันดรศักดิ์ที่พระบรมราชชนก (พระบาทสมเด็จ พระจุลจอมเกล้าเจ้าอยู่หัว รัชการที่ 5) โปรดเกล้าฯสถาปนาเจ้าฟ้า "มหิดลอดุลยเดช ดำรงพระนามอิสริยยศฐานันดรศักดิ์ เป็นเจ้ากรม 
+    <p style="text-indent:50px;">มหาวิทยาลัยสงขลานครินทร์เป็นมหาวิทยาลัยภูมิภาคใต้เป็นพระนามฐานันดรศักดิ์ที่พระบรมราชชนก (พระบาทสมเด็จ พระจุลจอมเกล้าเจ้าอยู่หัว รัชการที่ 5) โปรดเกล้าฯสถาปนาเจ้าฟ้า มหิดลอดุลยเดช ดำรงพระนามอิสริยยศฐานันดรศักดิ์ เป็นเจ้ากรม 
 	โดยพระราชทาน ชื่อเมืองสงขลา เป็นพระนามทรงกรมเพื่อเป็นเกียรติแก่เมืองสงขลา เมื่อพ.ศ. 2446 เสมือนเป็นเจ้าแห่งนครสงขลาเป็นมหาลัยตั้งขึ้นสำหรับชาวเกษตรกรรมตามพื้นที่ต่างๆจึงมีนโยบายอนุรักษ์ธรรมชาติและสิ่งแวดล้อมเป็นสำคัญ
 	อย่างเช่นดอกไม้ประจำมหาวิทยาลัยคือดอกศรีตรัง เปรียบเป็นสีม่วงอ่อนกลีบบางงดงามอ่อนหวาน เมื่อสายลมพัดมาเบาๆ หรือยามต้องแสงแดดอุ่น ๆ ดอกศรีตรังชูช่อพลิ้วไปตามแรงลม เป็นสัญลักษณ์ของชาวตรัง
     </p>
