--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@ p{
 	โดยพระราชทาน ชื่อเมืองสงขลา เป็นพระนามทรงกรมเพื่อเป็นเกียรติแก่เมืองสงขลา เมื่อพ.ศ. 2446 เสมือนเป็นเจ้าแห่งนครสงขลาเป็นมหาลัยตั้งขึ้นสำหรับชาวเกษตรกรรมตามพื้นที่ต่างๆจึงมีนโยบายอนุรักษ์ธรรมชาติและสิ่งแวดล้อมเป็นสำคัญ
 	อย่างเช่นดอกไม้ประจำมหาวิทยาลัยคือดอกศรีตรัง เปรียบเป็นสีม่วงอ่อนกลีบบางงดงามอ่อนหวาน เมื่อสายลมพัดมาเบาๆ หรือยามต้องแสงแดดอุ่น ๆ ดอกศรีตรังชูช่อพลิ้วไปตามแรงลม เป็นสัญลักษณ์ของชาวตรัง
     </p>
+	<a href="http://www.psu.ac.th/"target="_blank"><button class="w3-button w3-padding w3-white w3-border w3-round-large"><b>Web site >></b></button></p></a>
   </div>
 
   <!-- Contact Section -->
